--- a/src/static/index.html
+++ b/src/static/index.html
@@ -20,9 +20,10 @@
 </head>
 
 <body>
+    <div class="svg-container" style="display:none"></div>
     <h1>カラオケ精密採点くん</h1>
+    <div class="track-select-container"></div>
     <div style="font-size:12px;">PCに繋いだマイクの音程を表示します（スマホだと通話モードになり音がバグる）</div>
-    <audio muted></audio>
     <button class="start-button">start</button>
     <button class="stop-button">stop</button>
     <div class="melody-container">
